# qr-code-creator-gui

./: .gitignore  __main__.py  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
qrcreator/: qr_gui.py  qrcode_generator.py
