[tool.poetry]
name = "qrcreator"
version = "0.1.0"
description = ""
authors = ["Zach Butler <zbutler62@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
qrcode = "^7.4.2"
pysimplegui = "^4.60.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
